# bittorrent-cmd-tool

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: Main.cpp
src/commands/: info.cpp
src/lib/sha/: sha1.cpp
src/utils/: getRequest.cpp  getRequest.h  urlEncoder.cpp
